Regsiter Form chnages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ http://www.templatemo.com/tm-486-new-event
 				<ul class="nav navbar-nav navbar-right">
 					<li class="nav-item"><a href="#intro" class="nav-link">Home</a></li>
 					<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-					<li class="nav-item"><a href="#speakers" class="nav-link">Benefits</a></li>
+					<li class="nav-item"><a href="#speakers" class="nav-link">Commitee</a></li>
 					<li class="nav-item"><a href="#program" class="nav-link">Programs</a></li>
 					<li class="nav-item"><a href="#register" class="nav-link">Register</a></li>
 					<li class="nav-item"><a href="#venue" class="nav-link">Gallary</a></li>
@@ -88,7 +88,7 @@ http://www.templatemo.com/tm-486-new-event
 						explorers</h5>
 					<h6 class="wow bounceIn " data-wow-delay="0.9s">Haven't registered for Open Day 2024 yet ? Don't
 						miss out, secure your spot by registering now.</h6>
-					<a href="#register" class="btn btn-lg btn-danger smoothScroll wow fadeInUp"
+					<a href="#register" class="btn btn-lg btn-danger wow fadeInUp nav-link"
 						data-wow-delay="2.3s">REGISTER NOW</a>
 				</div>
 
