--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@ http://www.templatemo.com/tm-486-new-event
 					<li class="nav-item"><a href="#about" class="nav-link">About</a></li>
 					<li class="nav-item"><a href="#speakers" class="nav-link">Commitee</a></li>
 					<li class="nav-item"><a href="#program" class="nav-link">Programs</a></li>
-					<li class="nav-item"><a href="#register" class="nav-link">Register</a></li>
 					<li class="nav-item"><a href="#venue" class="nav-link">Gallary</a></li>
 					<li class="nav-item"><a href="#sponsors" class="nav-link">Sponsors</a></li>
-					<li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+					<!-- <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li> -->
 				</ul>
 
 			</div>
@@ -588,7 +587,7 @@ http://www.templatemo.com/tm-486-new-event
 	<!-- =========================
    REGISTER SECTION   
 ============================== -->
-	<section id="register" class="parallax-section">
+	<!-- <section id="register" class="parallax-section">
 		<div class="container">
 			<div class="row">
 
@@ -618,7 +617,7 @@ http://www.templatemo.com/tm-486-new-event
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<!-- =========================
@@ -773,7 +772,7 @@ http://www.templatemo.com/tm-486-new-event
 	<!-- =========================
     CONTACT SECTION   
 ============================== -->
-	<section id="contact" class="parallax-section">
+	<!-- <section id="contact" class="parallax-section">
 		<div class="container">
 			<div class="row">
 
@@ -809,7 +808,7 @@ http://www.templatemo.com/tm-486-new-event
 
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<!-- =========================
