--- a/gallery.html
+++ b/gallery.html
@@ -62,37 +62,37 @@
 <div id="gallery">
     <div id="galleryTitle"><h1>IEEE OpenDay | 2024</h1></div>
     <div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4473.JPG"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4467.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4470.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4468.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4474.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4471.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4476.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4475.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4481.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4483.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4485.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4478.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4469.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4472.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4484.jpg"
                                                                        alt="galleryImg"></div>
-        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/speakers-img2.jpg"
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4486.jpg"
                                                                        alt="galleryImg"></div>
     </div>
 </div>
