--- a/gallery.html
+++ b/gallery.html
@@ -94,6 +94,20 @@
                                                                        alt="galleryImg"></div>
         <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_4486.jpg"
                                                                        alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5473.jpg"
+                                                                       alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5472.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5483.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5474.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5475.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5477.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5478.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5476.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5480.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5482.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5481.jpg" alt="galleryImg"></div>
+        <div class=" imgDiv col-lg-3 col-md-6 col-sm-6 col-xs-12"><img class="galleryImg" src="images/IMG_5479.jpg" alt="galleryImg"></div>  
+                                                                                                                                     
     </div>
 </div>
 
