--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ about SECTION
             </div>
 
             <div class="wow fadeInUp col-md-6 col-sm-6" data-wow-delay="0.9s">
-                <img src="images/overview-img.jpg" class="img-responsive" alt="about">
+                <img src="images/IMG_5484.jpg" class="img-responsive" alt="about">
             </div>
 
         </div>
@@ -236,7 +236,7 @@ SPEAKERS SECTION
                 <h1>Project Chair</h1>
                 <div class="sliderImage">
                     <div class="imgDiv">
-                        <img src="images/Kavindra_Weerasinghe.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
+                        <img src="images/Thipuni Wijesinghe.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                         <h3>Kavindra_Weerasinghe</h3>
                         
                     </div>
@@ -344,6 +344,11 @@ SPEAKERS SECTION
             <div class="item">
                 <h1>Logistics Team</h1>
                 <div class="sliderImage">
+                    <div class="imgDiv">
+                        <img src="images/Kavindu Buddhika.jpeg" alt="images/speakers-img2.jpg" class="img-responsive">
+                        <h3>Kavindu Buddhika</h3>
+                        <p>Lead</p>
+                    </div>
                     <div class="imgDiv">
                         <img src="images/Akash Vidanage.jpg" alt="images/speakers-img2.jpg" class="img-responsive">
                         <h3>Akash Vidanage</h3>
